# Labprogrammazioneesame

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  ContoCorrente.cpp  ContoCorrente.h  Transazione.cpp  Transazione.h  main.cpp
test/: CMakeLists.txt  test_main.cpp
